--- a/ReadMe.Rmd
+++ b/ReadMe.Rmd
@@ -1,9 +1,13 @@
 ---
-title: "ReadMe"
+title: "ReadMe-Seal Cove"
 author: "Keith Lewis"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  html_document:
+    toc: true
+    toc_depth: 2
 ---
+
 <style type="text/css">
     div.datatables { height: auto !important;}
 </style>
@@ -125,7 +129,16 @@ Same variable in fixed and random component with justification plus ruminations 
 https://stats.stackexchange.com/questions/398444/how-to-correctly-model-repeated-measures-random-effects-in-a-linear-mixed-effect
 
 Bolker says you can use a variable as fixed and random
-https://stats.stackexchange.com/questions/235199/how-to-build-a-generalized-linear-mixed-model-with-repeated-measures-in-r
+https://stats.stackexchange.com/questions/235199/how-to-build-a-generalized-linear-mixed-model-with-repeated-measures-in-rc
+https://tutorials.inbo.be/tutorials/r_fixed_random/
+
+And Isabelle Ghement
+https://stats.stackexchange.com/questions/398444/how-to-correctly-model-repeated-measures-random-effects-in-a-linear-mixed-effect
+https://www.researchgate.net/post/For_generalized_mixed_effect_models_is_it_possible_to_appoint_a_variable_as_fixed_effect_and_random_effect_simultaneously
+- This shows how to visualize in simple way
+https://tutorials.inbo.be/tutorials/r_fixed_random/  
+
+** Conclude ** Stick with it and deal if the reviewer gets upset.  
 
 ## Crossed vs Nested  
 From Bolker_14-Fox-Chap13.pdf:
@@ -356,8 +369,30 @@ exp(2.548)
 exp(2.548 + 0.370)
 # Percent change with Back-transformed values
 (exp(2.548 + 0.370) - exp(2.548))/exp(2.548 + 0.370)
-# values are 0.37 ~ 0.38  and for percent change: 0.37*100 ~ 0.38*100
+# values are 0.37 ~ 0.38  and for percent change: 0.37*100 ~ 0.38*100 - I don't think that the denominator is right in this case - see next section
 ```
+
+# A note on percent change
+So, I think in general, if you are doing percent change, its just (new-old)/old*100.  For a linear model on natural scale, you can just do: 
+$$ [(Int + \beta) - Int]/Int*100$$
+Which reduces to:
+$$\beta/Intercept*100$$
+
+But when its on the log scale:
+$$(e^{Int + \beta} - e^{Int})/e^{Int}$$
+which reduces to:
+$$(e^{\beta} - 1)*100$$
+Note that much of the above is from ChatGPT
+
+# a note on percent change an zi
+
+So, the above is right but when you have zi models, what's the impact on percent chane.  My understanding, based on my own work and work with ChatGPT, is that when ziformula ~ 1, there is no impact.  But there will be when ziformula ~ variables.  
+
+See the percent_change_chatgpt.qmd for more plus notes (2025-06-18)
+
+# More on percent change (2025 - early Sept)
+I have spent the last week trying to better understand how glmmTMB plays with emmeans in order to extract comparisons and then calculate percent change while taking the hurdle model into account. especially when the ziformula = !~ 1.  See scratch_pad_emmeans where I went through the exercise for the density models for AS, ASYOY, and BTYOY - I did not do BT beause there are no zeros.  I figured out how the emmeans function works and then calculated percent change including when ziformula = ~ Time.  I compared these multiple ways.
+Note that I did not figure out why the options "cond" and "cmean" for the component arguement differ sometime but its time to move on.
 
 # Meeting for early May with Clarke and Kristin
 
@@ -365,4 +400,5 @@ exp(2.548 + 0.370)
 # To do
 - Fig 7 (large fish plots) where was this done - need the file: haven't received these.
 
-TEST
+# Notes  
+- I tried to find out how many times LUNKERs have been installed in NL but incredibly, it seems that we do not have this information.  Perhaps the Province??
